--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Dancing+Script:wght@600&family=Italiana&family=KoHo:wght@300&family=Luxurious+Script&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:wght@200&family=REM:wght@200&family=Raleway:wght@200&family=Rubik:ital,wght@1,300&display=swap"
         rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Dancing+Script:wght@600&family=IBM+Plex+Sans+Arabic:wght@100;200;300;400;500;600;700&family=Italiana&family=KoHo:wght@300&family=Luxurious+Script&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:wght@200&family=REM:wght@200&family=Raleway:wght@200&family=Rubik:ital,wght@1,300&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Dancing+Script:wght@600&family=IBM+Plex+Sans+Arabic:wght@100;200;300;400;500;600;700&family=Italiana&family=KoHo:wght@300&family=Luxurious+Script&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:wght@200&family=REM:wght@200&family=Raleway:wght@200&family=Rubik:ital,wght@1,300&display=swap"
+        rel="stylesheet">
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -27,7 +35,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>ادفع بنكي</title>
 </head>
 
 <body>
